<?xml version="1.0" encoding="utf-8"?>
<!--@author Aleksander Kähler, Group B129, Aalborg University-->
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_search_black_48dp"
            android:title="@string/nav_home" />
        <item
            android:id="@+id/nav_dinner_history"
            android:icon="@drawable/ic_history_black_48dp"
            android:title="@string/nav_dinner_history" />
        <item
            android:id="@+id/nav_dinner_plan"
            android:icon="@drawable/ic_today_black_48dp"
            android:title="@string/nav_dinner_plan" />
        <item
            android:id="@+id/nav_statistics"
            android:icon="@drawable/ic_trending_up_black_48dp"
            android:title="@string/nav_statistics" />
    </group>

    <item android:title="@string/nav_title_tools">
        <menu>
            <item
                android:id="@+id/nav_feedback"
                android:icon="@drawable/ic_feedback_black_48dp"
                android:title="@string/nav_feedback" />
            <item
                android:id="@+id/nav_preferences"
                android:icon="@drawable/ic_sort_black_48dp"
                android:title="@string/nav_preferences" />
            <item
                android:id="@+id/nav_settings"
                android:icon="@drawable/ic_settings_black_48dp"
                android:title="@string/nav_settings" />
        </menu>
    </item>

</menu>