<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">
    <PreferenceCategory android:title="@string/preferences_name_category">

        <EditTextPreference
            android:hint="@string/preferences_your_name_edit"
            android:key="username"
            android:title="@string/preferences_your_name_title" />
    </PreferenceCategory>
    <PreferenceCategory android:title="@string/preferences_ingredients_category">

        <PreferenceScreen android:title="@string/preferences_ingredients_title">

            <intent
                android:targetClass="dk.aau.student.mea_a1b129.picky.IngredientEditActivity"
                android:targetPackage="dk.aau.student.mea_a1b129.picky" />

        </PreferenceScreen>
    </PreferenceCategory>
</PreferenceScreen>