<?xml version="1.0" encoding="utf-8"?>
<!--@author Aleksander Kähler, Group B129, Aalborg University-->
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="dk.aau.student.mea_a1b129.dish_it.AddDinnerActivity"
    tools:showIn="@layout/activity_add_dinner">

    <ScrollView
        android:id="@+id/add_dinner_scrollview"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/add_dinner_horizontal_layout"
        android:layout_alignParentTop="true">

        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="0dp">

            <TextView
                android:id="@+id/add_dinner_dinner_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:paddingLeft="5dp"
                android:text="@string/add_dinner_name"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:textColor="@color/textColor" />

            <TextView
                android:id="@+id/textView3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignTop="@+id/add_dinner_dinner_name"
                android:layout_marginLeft="10dp"
                android:layout_toEndOf="@+id/add_dinner_dinner_name"
                android:text="@string/add_dinner_obligatory"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:textColor="#ff0000"
                android:textSize="10sp" />

            <EditText
                android:id="@+id/add_dinner_edit_dinner_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:layout_below="@+id/add_dinner_dinner_name"
                android:hint="@string/add_dinner_edit_dinner_name" />

            <TextView
                android:id="@+id/add_dinner_dinner_description"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:layout_below="@+id/add_dinner_edit_category"
                android:layout_marginTop="5dp"
                android:paddingLeft="5dp"
                android:text="@string/add_dinner_description"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:textColor="@color/textColor" />

            <EditText
                android:id="@+id/add_dinner_edit_dinner_description"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:layout_below="@+id/add_dinner_dinner_description"
                android:hint="@string/add_dinner_edit_dinner_description" />

            <TextView
                android:id="@+id/add_dinner_dinner_category"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:layout_below="@+id/add_dinner_edit_dinner_name"
                android:layout_marginTop="5dp"
                android:paddingLeft="5dp"
                android:text="@string/add_dinner_category"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:textColor="@color/textColor" />

            <EditText
                android:id="@+id/add_dinner_edit_category"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:layout_below="@+id/add_dinner_dinner_category"
                android:hint="@string/add_dinner_edit_category" />

            <TextView
                android:id="@+id/add_dinner_rating"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:layout_below="@+id/add_dinner_edit_price"
                android:layout_marginTop="5dp"
                android:paddingLeft="5dp"
                android:text="@string/add_dinner_rating"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:textColor="@color/textColor" />

            <RatingBar
                android:id="@+id/add_dinner_edit_rating"
                style="@android:style/Widget.DeviceDefault.RatingBar"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="false"
                android:layout_alignParentStart="false"
                android:layout_below="@+id/add_dinner_rating"
                android:layout_centerInParent="true"
                android:numStars="5" />

            <Button
                android:id="@+id/add_dinner_choose_date_button"
                style="@style/Base.Widget.AppCompat.Button.Small"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignEnd="@+id/add_dinner_choose_ingredients"
                android:layout_alignParentStart="true"
                android:layout_below="@+id/add_dinner_edit_rating"
                android:layout_marginTop="5dp"
                android:text="@string/add_dinner_choose_date_button" />

            <TextView
                android:id="@+id/add_dinner_date_chosen"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignBottom="@+id/add_dinner_choose_date_button"
                android:layout_alignParentEnd="true"
                android:layout_marginBottom="15dp"
                android:textAppearance="?android:attr/textAppearanceMedium" />

            <Button
                android:id="@+id/add_dinner_choose_ingredients"
                style="@style/Base.Widget.AppCompat.Button.Small"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignEnd="@+id/textView3"
                android:layout_alignParentStart="true"
                android:layout_below="@+id/add_dinner_choose_date_button"
                android:text="@string/add_dinner_choose_ingredients" />

            <GridView
                android:id="@+id/add_dinner_ingredient_gridview"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/add_dinner_choose_ingredients"
                android:layout_centerHorizontal="true"
                android:columnWidth="90dp"
                android:gravity="center"
                android:horizontalSpacing="5dp"
                android:numColumns="auto_fit"
                android:paddingTop="5dp"
                android:scrollbars="none"
                android:stretchMode="columnWidth"
                android:verticalSpacing="5dp" />

            <TextView
                android:id="@+id/add_dinner_price"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingLeft="5dp"
                android:text="@string/add_dinner_price"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:textColor="@color/textColor"
                android:layout_below="@+id/add_dinner_edit_dinner_description"
                android:layout_alignParentStart="true" />

            <EditText
                android:id="@+id/add_dinner_edit_price"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/add_dinner_price"
                android:layout_toEndOf="@+id/add_dinner_price_currency"
                android:hint="0.00"
                android:inputType="numberDecimal" />

            <TextView
                android:id="@+id/add_dinner_price_currency"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingLeft="5dp"
                android:text="@string/add_dinner_price_currency"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:textColor="@color/textColor"
                android:layout_alignBottom="@+id/add_dinner_edit_price"
                android:layout_alignParentStart="true"
                android:layout_alignTop="@+id/add_dinner_edit_price"
                android:gravity="center_vertical" />

        </RelativeLayout>
    </ScrollView>

    <LinearLayout
        android:id="@+id/add_dinner_horizontal_layout"
        style="@style/Widget.AppCompat.ButtonBar"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentStart="false"
        android:layout_gravity="bottom"
        android:gravity="right"
        android:orientation="horizontal">

        <Button
            android:id="@+id/add_dinner_cancel_button"
            style="@style/Base.Widget.AppCompat.Button.Borderless"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/add_dinner_cancel_button" />

        <Button
            android:id="@+id/add_dinner_save_button"
            style="@style/Base.Widget.AppCompat.Button.Borderless.Colored"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/add_dinner_save_button" />
    </LinearLayout>
</RelativeLayout>
