<?xml version="1.0" encoding="utf-8"?>
<!--@author Aleksander Kähler, Group B129, Aalborg University-->
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    style="@android:style/Theme.Dialog"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <Button
        android:id="@+id/dialog_add_ingredient_button"
        style="@style/Base.Widget.AppCompat.Button.Borderless"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="right"
        android:text="@string/dialog_add_ingredient_button"
        android:textSize="12sp"
        android:visibility="gone" />

    <ExpandableListView
        android:id="@+id/dialog_ingredient_listview"
        android:layout_width="match_parent"
        android:layout_height="300dp"
        android:layout_gravity="center_horizontal" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="right"
        android:orientation="horizontal">

        <Button
            android:id="@+id/dialog_cancel_button"
            style="@style/Widget.AppCompat.Button.Borderless.Colored"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="right"
            android:text="@string/dialog_cancel_button" />

        <Button
            android:id="@+id/dialog_confirm_button"
            style="@style/Widget.AppCompat.Button.Borderless.Colored"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="right"
            android:text="@string/dialog_confirm_button" />
    </LinearLayout>

</LinearLayout>