<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="wrap_content"
    android:layout_height="match_parent"
    tools:context="dk.aau.student.mea_a1b129.dish_it.IngredientDialogFragment">

    <Spinner
        android:id="@+id/dialog_ingredient_choose_category"
        style="@style/Base.Widget.AppCompat.Spinner"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_toEndOf="@+id/dialog_ingredient_choose_category_text"
        android:spinnerMode="dialog" />

    <TextView
        android:id="@id/dialog_ingredient_choose_category_text"
        style="@style/TextAppearance.AppCompat.Medium"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/dialog_ingredient_choose_category"
        android:layout_alignParentStart="true"
        android:paddingBottom="16dp"
        android:text="@string/ingredient_dialog_choose_category_text"
        android:textColor="@color/primary_dark_material_dark" />

    <EditText
        android:id="@+id/dialog_ingredient_ingredient_name_edit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignEnd="@+id/dialog_ingredient_choose_category"
        android:layout_alignStart="@+id/dialog_ingredient_choose_category"
        android:layout_below="@+id/dialog_ingredient_choose_category"
        android:inputType="text" />

    <TextView
        android:id="@+id/dialog_ingredient_name_title"
        style="@style/TextAppearance.AppCompat.Medium"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/dialog_ingredient_ingredient_name_edit"
        android:layout_alignParentStart="true"
        android:paddingBottom="16dp"
        android:text="@string/ingredient_dialog_name_title"
        android:textColor="@color/primary_dark_material_dark" />

    <Button
        android:id="@+id/dialog_ingredient_confirm_button"
        style="@style/Widget.AppCompat.Button.Borderless.Colored"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_below="@+id/dialog_ingredient_name_title"
        android:layout_marginTop="24dp"
        android:text="@string/dialog_confirm_button" />

    <Button
        android:id="@+id/dialog_ingredient_cancel_button"
        style="@style/Widget.AppCompat.Button.Borderless.Colored"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignTop="@+id/dialog_ingredient_confirm_button"
        android:layout_toStartOf="@+id/dialog_ingredient_confirm_button"
        android:text="@string/dialog_cancel_button" />
</RelativeLayout>
