<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="dk.aau.student.mea_a1b129.dish_it.DinnerHistory"
    tools:showIn="@layout/activity_dinner_history">

    <TextView
        android:id="@+id/history_filter_from_text"
        android:layout_width="120dp"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:paddingLeft="12dp"
        android:text="@string/dinner_history_filter_from"
        android:textAppearance="?android:attr/textAppearanceSmall" />

    <Button
        android:id="@+id/history_clear_button"
        style="@style/Base.Widget.AppCompat.Button.Borderless.Colored"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignStart="@+id/history_filter_to_button"
        android:layout_below="@+id/history_filter_to_button"
        android:layout_gravity="right"
        android:text="@string/dinner_history_clear_filter_button" />

    <TextView
        android:id="@+id/history_filter_to_text"
        android:layout_width="120dp"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_alignStart="@+id/history_filter_to_button"
        android:paddingLeft="12dp"
        android:text="@string/dinner_history_filter_to"
        android:textAppearance="?android:attr/textAppearanceSmall" />

    <Button
        android:id="@+id/history_filter_from_button"
        style="@style/Base.Widget.AppCompat.Button.Borderless"
        android:layout_width="120dp"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/history_filter_from_text"
        android:gravity="center_vertical"
        android:text="@string/dinner_history_choose_date" />

    <Button
        android:id="@+id/history_filter_to_button"
        style="@style/Base.Widget.AppCompat.Button.Borderless"
        android:layout_width="120dp"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_below="@+id/history_filter_from_text"
        android:gravity="center_vertical"
        android:text="@string/dinner_history_choose_date" />

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_alignParentEnd="true"
        android:layout_below="@+id/history_clear_button"
        android:background="@android:color/darker_gray" />

    <ListView
        android:id="@+id/history_list_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/history_clear_button" />

</RelativeLayout>
